[package]
name = "rust_video-processing"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_image-codec = { path = "rust_image-codec" }
image = "0.25.6"
itertools = "0.14.0"
ndarray = "0.16.1"
video-rs = { version = "0.10.3", features = ["ndarray"] }
imageproc = "0.25.0"
rand = "0.9.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
